k8s/backend-cart-deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: backend-cart-deployment
  namespace: ecommerce
  labels:
    app: backend-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-cart
  template:
    metadata:
      labels:
        app: backend-cart
    spec:
      imagePullSecrets:
              - name: ecr-secret        
      containers:
        - name: ecommerce-backend-cart
          image: 727646469309.dkr.ecr.us-east-1.amazonaws.com/ecommerce-cart:43c18ecf6eeff0be01a641178ac876d4a5013e7d
          command: ["npm", "run", "start:cart"]
          ports:
            - containerPort: 5002
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
