k8s/backend-order-deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: backend-order-deployment
  namespace: ecommerce
  labels:
    app: backend-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-order
  template:
    metadata:
      labels:
        app: backend-order
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: ecommerce-backend-order
          image: 727646469309.dkr.ecr.us-east-1.amazonaws.com/ecommerce-order:43c18ecf6eeff0be01a641178ac876d4a5013e7d
          command: ["npm", "run", "start:order"]
          ports:
            - containerPort: 5003
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
