k8s/backend-product-deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: backend-product-deployment
  namespace: ecommerce
  labels:
    app: backend-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-product
  template:
    metadata:
      labels:
        app: backend-product
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: ecommerce-backend-product
          image: 727646469309.dkr.ecr.us-east-1.amazonaws.com/ecommerce-product:43c18ecf6eeff0be01a641178ac876d4a5013e7d
          command: ["npm", "run", "start:product"]
          ports:
            - containerPort: 5001
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
