k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend-deployment
  namespace: ecommerce
  labels:
    app: ecommerce-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: ecommerce-frontend
          image: 727646469309.dkr.ecr.us-east-1.amazonaws.com/ecommerce-frontend:43c18ecf6eeff0be01a641178ac876d4a5013e7d
          command: ["npm", "run", "start:frontend"]
          ports:
            - containerPort: 5000          
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
