k8s/backend-cart-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-backend-cart-service
  namespace: ecommerce
  labels:
    app: backend-cart
spec:
  type: NodePort
  selector:
    app: backend-cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
