k8s/backend-order-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-backend-order-service
  namespace: ecommerce
  labels:
    app: backend-order
spec:
  type: NodePort
  selector:
    app: backend-order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
