k8s/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-frontend-service
  labels:
    app: ecommerce-frontend
spec:
  type: NodePort
  selector:
    app: ecommerce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
